<!-- Makes Screen Scrollable -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BasicLayout">
    
    <!-- Layout For Screen -->
	<LinearLayout
	    style="@style/LinearV"
        android:layout_gravity="center_vertical"
	    tools:context="com.example.teacherspet.control.CourseActivity" >
	
	    <!-- Attendance Button -->
	    <Button 
	        android:id="@+id/btn_attendance"
	        android:text="@string/lbl_attendance"
            style="@style/ActionButton" />
	    <!-- Assignments Button -->
	    <Button 
	        android:id="@+id/btn_assignments"
	        android:text="@string/lbl_assignments"
	        style="@style/ActionButton" />
	    <!-- Students Button -->
	    <Button 
	        android:id="@+id/btn_students"
	        android:text="@string/lbl_students"
            style="@style/ActionButton" />
	    <Button 
	        android:id="@+id/btn_grades"
	        android:text="@string/lbl_grades"
            style="@style/ActionButton" />
	    <!-- Lab Button -->
	    <Button 
	        android:id="@+id/btn_lab"
	        android:text="@string/lbl_lab"
            style="@style/ActionButton" />
	    <!-- Information Button -->
	    <Button 
	        android:id="@+id/btn_info"
	        android:text="@string/lbl_info"
            style="@style/ActionButton" />
	
	</LinearLayout>
</ScrollView>