<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BasicLayout"
    tools:context="com.example.teacherspet.control.AddAssignmentActivity">

    <!-- Top Layout -->
    <LinearLayout
        style="@style/LinearV">
        <!-- Enter Name Entry -->
        <EditText
            android:id="@+id/fld_aName"
            style="@style/Text_Small"
            android:hint="@string/lbl_gName"
            android:inputType="text"/>

        <!-- Enter ID Entry -->
        <EditText
            android:id="@+id/fld_dd"
            style="@style/Text_Small"
            android:hint="@string/lbl_date_assigned"
            android:inputType="date"/>

        <!-- Enter School Entry -->
        <EditText
            android:id="@+id/fld_da"
            style="@style/Text_Small"
            android:hint="@string/lbl_date_due"
            android:inputType="date"/>

        <!-- Enter Email Entry -->
        <EditText
            android:id="@+id/fld_aTotal"
            style="@style/Text_Small"
            android:hint="@string/lbl_assignment_total"
            android:inputType="number"/>

        <!-- Enter Password Entry -->
        <EditText
            android:id="@+id/fld_aDescript"
            style="@style/Text_Small"
            android:hint="@string/lbl_descript"/>
    </LinearLayout>

    <!-- Bottom Submit Button -->
    <Button
        android:id="@+id/btn_submit"
        style="@style/ActionButton"
        android:layout_alignParentBottom="true"
        android:text="@string/lbl_submit"/>

</RelativeLayout>
