<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BasicLayout"
    tools:context="com.example.teacherspet.view.AttendancePScreenActivity" >

    <!-- Header for Screen -->
    <TextView
        android:id="@+id/head_attn"
        style="@style/TextTitle"
        android:text="@string/title_attn"/>

    <Button
        android:id="@+id/btn_undo_r"
        style="@style/ActionButton"
        android:layout_centerVertical="true"
        android:text="@string/lbl_undo_r" />

    <Button
        android:id="@+id/btn_undo_s"
        style="@style/ActionButton"
        android:layout_below="@id/btn_undo_r"
        android:text="@string/lbl_undo_s" />

    <Button
        android:id="@+id/btn_take"
        style="@style/ActionButton"
        android:layout_above="@id/btn_undo_r"
        android:text="@string/lbl_take" />

</RelativeLayout>
