<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BasicLayout"
    tools:context="com.example.teacherspet.control.LoginActivity" >

    <!-- Header for Screen -->
    <TextView
        android:id="@+id/head_take_attn"
        style="@style/TextTitle"
        android:text="@string/title_app_name"/>
    
    <!-- User Name Block -->
    <LinearLayout
        android:id="@+id/uname_block"
        style="@style/LinearInput"
        android:layout_below="@id/head_take_attn"
        android:layout_marginTop="@dimen/title_margin">
        <!-- User Name Entry -->
        <EditText
            android:id="@+id/fld_username"
            style="@style/TextInput"
            android:text="@string/student_login" 
            android:inputType="text"/>
    </LinearLayout>
    
    <!-- Password Block -->
    <LinearLayout
        android:id="@+id/pwd_block"
        style="@style/LinearInput"
        android:layout_below="@id/uname_block"
        android:layout_marginTop="@dimen/title_margin">
        <!-- Password Entry -->
        <EditText
            android:id="@+id/fld_pwd"
            style="@style/TextInput"
            android:text="@string/student_login2"
            android:inputType="textPassword"
            />
    </LinearLayout>

        <!-- Login Button -->
         <Button
             android:layout_centerInParent="true"
             style="@style/ActionButton"
             android:id="@+id/btn_login"
             android:text="@string/lbl_login"/>

         <!-- Forgot Button -->
         <Button
             style="@style/ActionButton"
             android:id="@+id/btn_forgot"
             android:layout_below="@id/btn_login"
             android:text="@string/lbl_forgot" />

         <!-- New User Button -->
         <Button
             style="@style/BasicButton"
             android:id="@+id/btn_newUser"
             android:layout_below="@id/btn_forgot"
             android:text="@string/lbl_newUser"
             android:onClick="onClicked"/>

</RelativeLayout>
