<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BasicLayout"
    tools:context="com.example.teacherspet.control.HomeActivity" >

        <!-- Course Button -->
         <Button
            android:id="@+id/btn_courses"
            android:text="@string/lbl_courses"
             android:layout_centerInParent="true"
            style="@style/ActionButton" />

        <!-- Alert Button -->
        <Button
            android:id="@+id/btn_alerts"
            android:text="@string/lbl_alerts"
            android:layout_above="@id/btn_courses"
            style="@style/ActionButton"/>

         <!-- Schedule Button -->
         <Button
            android:id="@+id/btn_schedule"
            android:text="@string/lbl_schedule"
             android:layout_below="@id/btn_courses"
            style="@style/ActionButton"/>

</RelativeLayout>
